--- a/client/package.json
+++ b/client/package.json
@@ -5,15 +5,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^6.2.1",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "classnames": "^2.5.1",
+    "draft-js": "^0.11.7",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.2",
-    "react-speech-recognition": "^4.0.1"
+    "react-speech-recognition": "^4.0.1",
+    "tinymce": "^7.9.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
