--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "server",
+  "name": "second-brain-journal-server",
   "version": "1.0.0",
   "main": "server.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "echo 'No build needed for server'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
